--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "An ESLint plugin for clsx/classnames",
   "main": "./lib/index.js",
   "scripts": {
-    "lint": "eslint .",
+    "lint": "npm-run-all \"lint:*\"",
+    "lint:docs": "markdownlint \"**/*.md\"",
+    "lint:eslint-docs": "npm run update:eslint-docs -- --check",
+    "lint:js": "eslint .",
+    "update:eslint-docs": "eslint-doc-generator",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -28,8 +32,11 @@
     "eslint": "^8.31.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.6.0",
+    "eslint-doc-generator": "^1.4.2",
     "eslint-plugin-import": "^2.27.4",
     "eslint-plugin-prettier": "^4.2.1",
+    "markdownlint-cli": "^0.33.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.8.2"
   },
   "dependencies": {}
