--- a/package.json
+++ b/package.json
@@ -40,5 +40,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "lodash": "^4.17.21"
+  }
 }
