--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "eslint-plugin-clsx",
   "version": "0.0.1",
   "description": "An ESLint plugin for clsx/classnames",
-  "main": "./lib/index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
   "scripts": {
+    "build": "rimraf dist && tsup src --format cjs",
     "lint": "npm-run-all \"lint:*\"",
+    "lint:tsc": "tsc",
     "lint:docs": "markdownlint \"**/*.md\"",
     "lint:eslint-docs": "npm run update:eslint-docs -- --check",
     "lint:js": "eslint .",
-    "update:eslint-docs": "eslint-doc-generator",
+    "update:eslint-docs": "npm run build && eslint-doc-generator",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -29,18 +33,27 @@
   },
   "homepage": "https://github.com/temoncher/eslint-plugin-clsx#readme",
   "devDependencies": {
+    "@changesets/cli": "^2.26.0",
+    "@types/eslint": "^8.4.10",
     "@types/estree": "^1.0.0",
+    "@types/node": "^18.11.18",
+    "@typescript-eslint/eslint-plugin": "^5.48.1",
+    "@typescript-eslint/parser": "^5.48.1",
     "eslint": "^8.31.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-doc-generator": "^1.4.2",
     "eslint-plugin-import": "^2.27.4",
     "eslint-plugin-prettier": "^4.2.1",
     "markdownlint-cli": "^0.33.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.8.2"
+    "prettier": "^2.8.2",
+    "rimraf": "^4.0.7",
+    "tsup": "^6.5.0",
+    "typescript": "^4.9.4"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "remeda": "^1.5.0"
   }
 }
