--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16.x
-          cache: .npm
+          cache: npm
       
       - run: npm ci
       - name: Create Release Pull Request or Publish
