--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint:eslint-docs": "npm run update:eslint-docs -- --check",
     "lint:js": "eslint .",
     "update:eslint-docs": "npm run build && eslint-doc-generator",
-    "release": "npm run build && changesets publish",
+    "release": "npm run build && changeset publish",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
