--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "rimraf dist && tsup src --format cjs",
+    "build": "rimraf dist && tsup src/**/*.ts !src/**/*.test.ts !src/rules/tests-setup.mjs --format cjs",
     "lint": "npm-run-all \"lint:*\"",
     "lint:tsc": "tsc",
     "lint:docs": "markdownlint \"**/*.md\"",
@@ -14,7 +14,7 @@
     "lint:js": "eslint .",
     "update:eslint-docs": "npm run build && eslint-doc-generator",
     "release": "npm run build && changeset publish",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest run"
   },
   "repository": {
     "type": "git",
@@ -34,27 +34,29 @@
   },
   "homepage": "https://github.com/temoncher/eslint-plugin-clsx#readme",
   "devDependencies": {
-    "@changesets/cli": "^2.26.0",
-    "@types/eslint": "^8.4.10",
-    "@types/estree": "^1.0.0",
-    "@types/node": "^18.11.18",
-    "@typescript-eslint/eslint-plugin": "^5.48.1",
-    "@typescript-eslint/parser": "^5.48.1",
-    "eslint": "^8.31.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-doc-generator": "^1.4.2",
-    "eslint-plugin-import": "^2.27.4",
-    "eslint-plugin-prettier": "^4.2.1",
-    "markdownlint-cli": "^0.33.0",
+    "@changesets/cli": "^2.27.8",
+    "@types/eslint": "^8.56.12",
+    "@types/estree": "^1.0.5",
+    "@types/node": "^22.5.4",
+    "@typescript-eslint/eslint-plugin": "^8.4.0",
+    "@typescript-eslint/parser": "^8.4.0",
+    "@typescript-eslint/rule-tester": "^8.4.0",
+    "@typescript-eslint/types": "^8.4.0",
+    "@typescript-eslint/utils": "^8.4.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-doc-generator": "1.4.2",
+    "eslint-plugin-import": "^2.30.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "markdownlint-cli": "^0.41.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.8.2",
-    "rimraf": "^4.0.7",
-    "tsup": "^6.5.0",
-    "typescript": "^4.9.4"
+    "prettier": "^3.3.3",
+    "rimraf": "^6.0.1",
+    "tsup": "^8.2.4",
+    "typescript": "^5.5.4",
+    "vitest": "^2.0.5"
   },
   "dependencies": {
-    "remeda": "^1.5.0"
+    "remeda": "^2.12.0"
   }
 }
