--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "target": "es2016",
         "lib": ["ESNext"],
-        "module": "commonjs",
+        "module": "NodeNext",
         "resolveJsonModule": true,
         "noEmit": true,
         "esModuleInterop": true,
