revert tsup build changes

--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "An ESLint plugin for clsx/classnames",
   "main": "dist/index.js",
   "scripts": {
-    "build": "rimraf dist && tsup src/**/*.ts !src/**/*.test.ts !src/rules/tests-setup.mjs --format cjs",
+    "build": "rimraf dist && tsup src --format cjs",
     "lint": "npm-run-all \"lint:*\"",
     "lint:tsc": "tsc",
     "lint:docs": "markdownlint \"**/*.md\"",
-    "//<disabled-for-now>lint:eslint-docs": "npm run update:eslint-docs -- --check",
+    "lint:eslint-docs": "npm run update:eslint-docs -- --check",
     "lint:js": "eslint .",
     "update:eslint-docs": "npm run build && eslint-doc-generator",
     "release": "npm run build && changeset publish",
