--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "An ESLint plugin for clsx/classnames",
   "main": "dist/index.js",
   "scripts": {
-    "build": "rimraf dist && node ./generate-all-rules.js && tsup",
+    "build": "rimraf dist && npm run generate-rules && tsup",
     "lint": "npm-run-all \"lint:*\"",
     "lint:tsc": "tsc",
     "lint:docs": "markdownlint \"**/*.md\"",
     "lint:eslint-docs": "npm run update:eslint-docs -- --check",
     "lint:js": "eslint .",
     "update:eslint-docs": "npm run build && eslint-doc-generator",
+    "generate-rules": "node ./generate-all-rules.js && eslint ./src/rules/*.generated.ts --fix",
     "release": "npm run build && changeset publish",
     "test": "vitest run"
   },
