cleanup published files

--- a/package.json
+++ b/package.json
@@ -39,8 +39,6 @@
     "@typescript-eslint/eslint-plugin": "^8.4.0",
     "@typescript-eslint/parser": "^8.4.0",
     "@typescript-eslint/rule-tester": "^8.4.0",
-    "@typescript-eslint/types": "^8.4.0",
-    "@typescript-eslint/utils": "^8.4.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-doc-generator": "1.4.2",
@@ -55,6 +53,15 @@
     "vitest": "^2.0.5"
   },
   "dependencies": {
+    "@typescript-eslint/types": "^8.4.0",
+    "@typescript-eslint/utils": "^8.4.0",
     "remeda": "^2.12.0"
-  }
+  },
+  "files": [
+    "*.md",
+    "!{CONTRIBUTING,RELEASE}.md",
+    "LICENSE",
+    "docs",
+    "dist"
+  ]
 }
