add eslint as peer dependency

--- a/package.json
+++ b/package.json
@@ -57,6 +57,9 @@
     "@typescript-eslint/utils": "^8.4.0",
     "remeda": "^2.12.0"
   },
+  "peerDependencies": {
+    "eslint": "^8"
+  },
   "files": [
     "*.md",
     "!{CONTRIBUTING,RELEASE}.md",
