--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@changesets/cli": "^2.27.8",
     "@types/eslint": "^8.56.12",
+    "@types/esquery": "^1.5.4",
     "@types/node": "^22.5.4",
     "@typescript-eslint/eslint-plugin": "^8.4.0",
     "@typescript-eslint/parser": "^8.4.0",
@@ -55,6 +56,7 @@
   "dependencies": {
     "@typescript-eslint/types": "^8.4.0",
     "@typescript-eslint/utils": "^8.4.0",
+    "esquery": "^1.6.0",
     "remeda": "^2.12.0"
   },
   "peerDependencies": {
