--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@changesets/cli": "^2.27.12",
     "@types/eslint": "^9.6.1",
     "@types/esquery": "^1.5.4",
-    "@types/node": "^22.13.4",
+    "@types/node": "^22.13.0",
     "@typescript-eslint/eslint-plugin": "^8.23.0",
     "@typescript-eslint/parser": "^8.23.0",
     "@typescript-eslint/rule-tester": "^8.23.0",
@@ -51,6 +51,7 @@
     "rimraf": "^6.0.1",
     "tsup": "^8.3.6",
     "typescript": "^5.7.3",
+    "typescript-eslint": "^8.23.0",
     "vitest": "^3.0.5"
   },
   "dependencies": {
